[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Golem.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Turret.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/PewAudio.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 134.406

[node name="Turret" type="Node2D"]
script = ExtResource( 2 )

[node name="Golem" parent="." instance=ExtResource( 1 )]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="PewAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
